--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/fetch.js" defer></script>
 </head>
 
 <body>
 
-    <div class="container">
-        <article class="productContainer">
+    <div id="container">
+        <!-- <article class="productContainer">
             <img src="https://i.dummyjson.com/data/products/1/1.jpg" alt="" class="productImg">
             <h1 class="productTitle">iPhone 9</h1>
             <p class="productDesc">An apple mobile which is nothing like apple</p>
@@ -36,10 +37,14 @@
             <h2 class="productPrice">$549</h2>
             <p class="productRating">4.69 / 5</p>
             <button class="productButton">Add to cart</button>
-        </article>
+        </article> -->
     </div>
 
-    <div class="container">
+
+
+
+
+    <!-- <div class="container">
         <article class="userContainer">
             <figure class="userHeaderContainer">
                 <img src="https://robohash.org/hicveldicta.png" alt="" class="userImage">
@@ -52,7 +57,31 @@
                 <p>📍 Nashville, TN</p>
             </div>
         </article>
-    </div>
+        <article class="userContainer">
+            <figure class="userHeaderContainer">
+                <img src="https://robohash.org/hicveldicta.png" alt="" class="userImage">
+            </figure>
+            <h1 class="userName">Terry Medhurst</h1>
+            <div class="userInfo">
+                <p>✉️ atuny0@sohu.com</p>
+                <p>📞 +63 791 675 8914</p>
+                <p>🌐 slashdot.org</p>
+                <p>📍 Nashville, TN</p>
+            </div>
+        </article>
+        <article class="userContainer">
+            <figure class="userHeaderContainer">
+                <img src="https://robohash.org/hicveldicta.png" alt="" class="userImage">
+            </figure>
+            <h1 class="userName">Terry Medhurst</h1>
+            <div class="userInfo">
+                <p>✉️ atuny0@sohu.com</p>
+                <p>📞 +63 791 675 8914</p>
+                <p>🌐 slashdot.org</p>
+                <p>📍 Nashville, TN</p>
+            </div>
+        </article>
+    </div> -->
 
 </body>
 
