--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 
-<!-- 
+ 
 
     <div class="container1">
         <article class="userContainer">
@@ -81,7 +81,7 @@
                 <p>📍 Nashville, TN</p>
             </div>
         </article>
-    </div> -->
+    </div>
 
 </body>
 
