--- a/index.html
+++ b/index.html
@@ -14,37 +14,34 @@
 <body>
 
     <div id="container">
-        <!-- <article class="productContainer">
-            <img src="https://i.dummyjson.com/data/products/1/1.jpg" alt="" class="productImg">
-            <h1 class="productTitle">iPhone 9</h1>
-            <p class="productDesc">An apple mobile which is nothing like apple</p>
-            <h2 class="productPrice">$549</h2>
-            <p class="productRating">4.69 / 5</p>
-            <button class="productButton">Add to cart</button>
-        </article>
-        <article class="productContainer">
-            <img src="https://i.dummyjson.com/data/products/1/1.jpg" alt="" class="productImg">
-            <h1 class="productTitle">iPhone 9</h1>
-            <p class="productDesc">An apple mobile which is nothing like apple</p>
-            <h2 class="productPrice">$549</h2>
-            <p class="productRating">4.69 / 5</p>
-            <button class="productButton">Add to cart</button>
-        </article>
-        <article class="productContainer">
-            <img src="https://i.dummyjson.com/data/products/1/1.jpg" alt="" class="productImg">
-            <h1 class="productTitle">iPhone 9</h1>
-            <p class="productDesc">An apple mobile which is nothing like apple</p>
-            <h2 class="productPrice">$549</h2>
-            <p class="productRating">4.69 / 5</p>
-            <button class="productButton">Add to cart</button>
-        </article> -->
+        
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
  
 
-    <div class="container1">
+    <!-- <div class="container1">
         <article class="userContainer">
             <figure class="userHeaderContainer">
                 <img src="https://robohash.org/hicveldicta.png" alt="" class="userImage">
@@ -81,7 +78,7 @@
                 <p>📍 Nashville, TN</p>
             </div>
         </article>
-    </div>
+    </div> -->
 
 </body>
 
