--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/main.js" defer></script>
-    <script src="assets/js/fetch.js" defer></script>
 </head>
 
 <body>
 
     <div id="container">
-        
+        <img alt="cart" src="" id="cartButton">
+        <div id="cartContainer"></div>
+        <div id="productContainer"></div>
     </div>
 
 
@@ -39,7 +40,6 @@
 
 
 
- 
 
     <!-- <div class="container1">
         <article class="userContainer">
